# redgrease

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  docker-compose.yml  logging.ini  publish.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  improvement-suggestion.md  improvement.md  new-feature-request.md  question.md
.github/workflows/: code_compliance.yml  full_tests.yml  publish.yml  quick_tests.yml
docs/images/: redgrease_dependencies.drawio
docs/source/: advanced.rst  (+23 more)
examples/: Demo.ipynb  basic.py  basics.py  cache_get_command.py  cache_get_command_faulty.py  common.py  counting_users.py  exe_example.py  first_class_gearfunction_objects.py  histogram.py  mixed_features.py  mock_data.py  redisconf2021_demo.ipynb  redisconf2021_demo_v2.ipynb  redisconf2021_demo_v3.ipynb  redisconf2021_demo_v4.ipynb  redisconf2021_demo_v5 copy.ipynb  redisconf2021_demo_v5.ipynb  requirements.txt  serverside_redis_commands.py  transaction_stream.py
src/: Dockerfile  LICENSE  hysteresis.py  loader.py  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  watcher.py
temp/: test_stuff.py
tests/: conftest.py  test_builtin_runtime_functions.py  test_client.py  test_connection.py  test_example_scripts.py  test_extended_runtime_functions.py  test_gearfunction_gearsbuilder.py  test_gearfunction_operations.py  test_gearfunction_readers.py  test_gears_config.py  test_gearsfunction_readers.py  test_prog_gears.py  test_runtime_redis_api.py  test_stub.py  test_utils.py
(+62 files in other folders)
